add font nad color

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
 </head>
-<body>
+<body class="avenir dark-gray bg-washed-red">
   <div class="f1">
     Hello World
   </div>
