--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="avenir dark-gray bg-washed-red">
   <div class="f1">
-    <h1 class=center>
+    <h1 class="center">
       How to write X in Python and JavaScript
     </h1>
   </div>
