--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <title>Document</title>
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
 </head>
-<body class="avenir dark-gray bg-washed-red center">
-  <div class="f1">
-    <h1>
+<body class="avenir dark-gray bg-washed-red">
+  <div class="center">
+    <h1 class="f3">
       How to write X in Python and JavaScript
     </h1>
   </div>
