--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
 </head>
 <body class="avenir dark-gray bg-washed-red">
-  <div class="center">
+  <div class=".center">
     <h1 class="f1">
       How to write X in Python and JavaScript
     </h1>
