--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
 </head>
 <body class="avenir dark-gray bg-washed-red">
-  <div class=".center">
-    <h1 class="f1">
+  <div class="center mw7">
+    <h1 class="f1 tc pt5">
       How to write X in Python and JavaScript
     </h1>
   </div>
