--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="avenir dark-gray bg-washed-red">
   <div class="center mw7">
-    <h1 class="f1 tc pt5">
+    <h1 class="f1 tc pt5 lh-title">
       How to write X in Python and JavaScript
     </h1>
   </div>
