--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
 </head>
 <body class="avenir dark-gray bg-washed-red">
-  <div class="center mw7">
-    <h1 class="f1 tc pt5 lh-title">
+  <div class="contents-container center mw7">
+    <h1 class="title f1 tc pt5 lh-title">
       How to write X in Python and JavaScript
     </h1>
+  </div>
+  <div class="mw9 center ph3-ns">
+    <div class="cf ph2-ns">
+      <div class="fl w-100 w-50-ns pa2">
+        <div class="outline bg-white pv4"></div>
+      </div>
+      <div class="fl w-100 w-50-ns pa2">
+        <div class="outline bg-white pv4"></div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
