--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body class="avenir dark-gray bg-washed-red">
 
-  <div class="bottom-right-button" style="position: fixed;
+  <div class="bottom-right-button"
+  style="position: fixed;
   bottom: 35px;
   right: 30px;
   opacity: 0.5;
