--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   opacity: 0.5;
   z-index: 5;">
       <a class="bottom-right-button-link　js-bottom-right-button-link" href="">
-        <img class="bottom-right-icon" src="/static/images/right-bottom-buttun.png" style="width: 35px; height: 35px;">
+        <img class="bottom-right-icon" src="static/images/right-bottom-buttun.png" style="width: 40px; height: 40px;">
       </a>
   </div>
 
@@ -2506,7 +2506,7 @@ console.log(rubberDuck.eyeColor)
 <script src="https://unpkg.com/prismjs@1.15.0/components/prism-python.min.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script src="/static/app.js"></script>
+<script src="static/app.js"></script>
 
 </body>
 </html>
