--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   right: 30px;
   opacity: 0.5;
   z-index: 5;">
-      <a class="bottom-right-button-link　js-bottom-right-button-link" href="">
+      <a class="bottom-right-button-link js-bottom-right-button-link" href="#">
         <img class="bottom-right-icon" src="static/images/right-bottom-buttun.png" style="width: 40px; height: 40px;">
       </a>
   </div>
