Change title and add favicon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>How to write X in Python 3 and JavaScript (ES2015)</title>
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
   <link rel="stylesheet" href="static/prism-base16-atelierplateau.light.css"/>
   <style>
@@ -35,7 +35,7 @@
 
   <div class="title-container center mw7 ph3">
     <h1 class="title f1-ns f2 tc pt3 pt5-ns lh-title">
-      How to write X in Python and JavaScript
+      How to write X in Python 3 and JavaScript (ES2015)
     </h1>
   </div>
   <div class="header-text-container center mw7 pb3 ph3">
