--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <img class="ba b--white bw2 dib br4" src="static/images/saya-profile.jpg" width="130" height="130" />
     </div>
     <p class="profile-text mw6 center" style="margin-top:0;">
-      I'm Saya, a jewelry designer and a junior JavaScript/Python developer. Find me on Twitter: <a href="https://twitter.com/sayajewels">@sayajewels</a>
+      I'm Saya, a jewelry designer and a junior JavaScript/Python developer living in Tokyo. Find me on Twitter: <a href="https://twitter.com/sayajewels">@sayajewels</a>
     </p>
   </div>
   <div class="tabele-of-contents center mw7 pb3 ph3 mb4">
