--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>How to write X in both Python 3 and JavaScript (ES2015)</title>
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
   <link rel="stylesheet" href="static/prism-base16-atelierplateau.light.css"/>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <style>
     a {
       color: inherit;
