--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@ console.log(Math.abs(50))</code></pre>
         <div class="overflow-auto ba bw2 b--white br4">
           <pre><code class="language-python">import math
 
-# 2 ceil...the smallest integer greater than or equal to x
+# 2
 print(math.ceil(1.5))
-# 1 math.floor...the largest integer less than or equal to x
+# 1
 print(math.floor(1.5))
 # 2
 print(round(1.5))
@@ -105,11 +105,11 @@ print(round(1.5))
       <div class="fl w-100 w-50-l pa2 mb3">
         <h4 class="f5 mt0 mb2 normal"><strong>JavaScript (ES2015)</strong> / <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Math/ceil"><code>ceil</code></a>, <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Math/floor"><code>floor</code></a>, <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Math/round"><code>round</code></a></h4>
         <div class="overflow-auto ba bw2 b--white br4">
-          <pre><code class="language-javascript">// 2 the smallest integer greater than or equal to x
+          <pre><code class="language-javascript">// 2
 console.log(Math.ceil(1.5))
-// 1 the largest integer less than or equal to x.
+// 1
 console.log(Math.floor(1.5))
-// 2 round
+// 2
 console.log(Math.round(1.5))
 </code></pre>
         </div>
@@ -120,9 +120,9 @@ console.log(Math.round(1.5))
       <div class="fl w-100 w-50-l pa2 mb3">
         <h4 class="f5 mt0 mb2 normal"><strong>Python 3</strong> / <a href="https://docs.python.org/3/library/functions.html#max"><code>max</code></a>, <a href="https://docs.python.org/3/library/functions.html#min"><code>min</code></a></h4>
         <div class="overflow-auto ba bw2 b--white br4">
-          <pre><code class="language-python"># 100 max...Return the largest item in an iterable or the largest of two or more arguments
+          <pre><code class="language-python"># 100
 print(max(100, 50))
-# 40 min...Return the smallest item in an iterable or the smallest of two or more arguments
+# 40
 print(min(80, 40))
 </code></pre>
         </div>
@@ -184,10 +184,6 @@ if (someNumber === 1) {
           <pre><code class="language-python">x = 2
 y = 3
 
-# expr1 if... else expr2
-# if True  => return expr1
-# if False => return expr2
-
 # even
 print("even" if x % 2 == 0 else "odd")
 # odd
@@ -200,11 +196,6 @@ print("even" if y % 2 == 0 else "odd")
         <div class="overflow-auto ba bw2 b--white br4">
           <pre><code class="language-javascript">const x = 2
 const y = 3
-
-// condition ? expr1 : expr2
-// => expr1 is True, expr2 is False
-// if True => return expr1
-// if False => return expr2
 
 // even
 console.log(x % 2 === 0 ? 'even' : 'odd')
@@ -284,15 +275,13 @@ else:
       <div class="fl w-100 w-50-l pa2 mb3">
         <h4 class="f5 mt0 mb2 normal"><strong>JavaScript (ES2015)</strong> / <a href="https://developer.mozilla.org/en-US/docs/Glossary/Falsy"><code>Falsy Values</code></a></h4>
         <div class="overflow-auto ba bw2 b--white br4">
-          <pre><code class="language-javascript">// 'abc' === 'abc'
-// yes
+          <pre><code class="language-javascript">// yes
 if ('abc' === 'abc') {
   console.log('yes')
 } else {
   console.log('no')
 }
 
-// 'abc' !== 'def'
 // yes
 if ('abc' !== 'def') {
   console.log('yes')
@@ -300,7 +289,6 @@ if ('abc' !== 'def') {
   console.log('no')
 }
 
-// true && false
 // no
 if (true && false) {
   console.log('yes')
@@ -308,7 +296,6 @@ if (true && false) {
   console.log('no')
 }
 
-// true || false
 // yes
 if (true || false) {
   console.log('yes')
@@ -316,7 +303,6 @@ if (true || false) {
   console.log('no')
 }
 
-// !false
 // yes
 if (!false) {
   console.log('yes')
@@ -324,7 +310,6 @@ if (!false) {
   console.log('no')
 }
 
-// 0
 // no
 if (0) {
   console.log('yes')
@@ -332,7 +317,6 @@ if (0) {
   console.log('no')
 }
 
-// ''
 // no
 if ('') {
   console.log('yes')
@@ -340,7 +324,6 @@ if ('') {
   console.log('no')
 }
 
-// undefined
 // no
 if (undefined) {
   console.log('yes')
@@ -348,7 +331,6 @@ if (undefined) {
   console.log('no')
 }
 
-// null
 // no
 if (null) {
   console.log('yes')
@@ -356,7 +338,6 @@ if (null) {
   console.log('no')
 }
 
-// !!!null
 // yes
 if (!!!null) {
   console.log('yes')
@@ -384,7 +365,6 @@ except NameError:
         <h4 class="f5 mt0 mb2 normal"><strong>JavaScript (ES2015)</strong> / <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/try...catch"><code>try...catch</code></a></h4>
         <div class="overflow-auto ba bw2 b--white br4">
           <pre><code class="language-javascript">// foo is not defined
-
 try {
   foo()
 } catch (error) {
@@ -423,7 +403,6 @@ for number in range(1, 100):
 // Fizz
 // 4
 // Buzz
-
 for (let i = 1; i <= 100; i = i + 1) {
   if (i === 3) {
     console.log('Fizz')
@@ -543,8 +522,6 @@ print(number_1 + 2)
         <h4 class="f5 mt0 mb2 normal"><strong>JavaScript (ES2015)</strong> / <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/parseInt"><code>parseInt</code></a></h4>
         <div class="overflow-auto ba bw2 b--white br4">
           <pre><code class="language-javascript">const string1 = '1'
-
-// parseInt converts string into integer
 const number1 = parseInt(string1)
 
 // 3
@@ -600,12 +577,6 @@ print(some_string[2:5])
         <h4 class="f5 mt0 mb2 normal"><strong>JavaScript (ES2015)</strong> / <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/substring"><code>substring</code></a></h4>
         <div class="overflow-auto ba bw2 b--white br4">
           <pre><code class="language-javascript">const someString = '0123456'
-
-// .substring(indexStart, indexEnd)
-// indexStart =>
-// The index of the first character to include in the returned substring.
-// indexEnd =>
-// Optional.The index of the first character to exclude from the returned substring.
 
 // 234
 console.log(someString.substring(2, 5))
@@ -667,9 +638,6 @@ console.log(someString.trim())
           <pre><code class="language-python">some_string = "a,b,c"
 some_string_split = some_string.split(",")
 
-# # ['a', 'b', 'c']
-# print(some_string_split)
-
 # a
 print(some_string_split[0])
 # b
@@ -687,10 +655,8 @@ const someStringSplit = someString.split(',')
 
 // a
 console.log(someStringSplit[0])
-
 // b
 console.log(someStringSplit[1])
-
 // c
 console.log(someStringSplit[2])
 </code></pre>
@@ -719,7 +685,6 @@ print(some_string.replace(" ", ","))
 // console.log(someString.replace(' ', ','))
 
 // Use / /g instead of ' ' to change every space
-// g = global (all)
 console.log(someString.replace(/ /g, ','))
 </code></pre>
         </div>
@@ -733,7 +698,6 @@ console.log(someString.replace(/ /g, ','))
           <pre><code class="language-python">import re
 
 # Has a number
-# d = digit
 if re.search(r"\d", "iphone 8"):
     print("Has a number")
 
@@ -752,7 +716,6 @@ if ('iphone 8'.match(/\d/g)) {
 }
 
 // Doesn't have a number
-// match() returns null
 if (!'iphone x'.match(/\d/g)) {
   console.log("Doesn't have a number")
 }
@@ -779,8 +742,6 @@ for item in some_list:
         <h4 class="f5 mt0 mb2 normal"><strong>JavaScript (ES2015)</strong> / <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/forEach"><code>forEach</code></a></h4>
         <div class="overflow-auto ba bw2 b--white br4">
           <pre><code class="language-javascript">const someList = [6, 3, 5]
-
-// The forEach() method executes a provided function once for each array element.
 
 // 6
 // 3
@@ -838,8 +799,6 @@ for i, item in enumerate(some_list):
         <div class="overflow-auto ba bw2 b--white br4">
           <pre><code class="language-javascript">const someList = [6, 3, 5]
 
-// forEach() method executes a provided function once for each array element.
-
 // 0 6
 // 1 3
 // 2 5
@@ -889,9 +848,6 @@ if (![4, 5, 6].includes(2)) {
         <div class="overflow-auto ba bw2 b--white br4">
           <pre><code class="language-python">some_list = [1, 2, 3, 4]
 
-# <list_reverseiterator object at 0x1053a7ef0>
-# print(reversed(some_list))
-
 # reversed(some_list) is just an iterable.
 # To convert an iterable into a list, use list()
 reversed_list = list(reversed(some_list))
@@ -922,10 +878,6 @@ someList.reverse()
 someList.forEach(element => {
   console.log(element)
 })
-
-// * Careful: reverse is destructive. It also changes the original array * /
-// Array(4)[4, 3, 2, 1]
-// console.log(someList)
 </code></pre>
         </div>
       </div>
@@ -1027,8 +979,8 @@ someList.forEach(element => {
         <div class="overflow-auto ba bw2 b--white br4">
           <pre><code class="language-python">original_list = [1, 2]
 
-# [original_list, 3] => [[1, 2], 3]
-# [*original_list, 3] => [1, 2, 3]
+# [original_list, 3] -> [[1, 2], 3]
+# [*original_list, 3] -> [1, 2, 3]
 new_list = [*original_list, 3]
 original_list[0] = 5
 
@@ -1045,8 +997,8 @@ for x in new_list:
         <div class="overflow-auto ba bw2 b--white br4">
           <pre><code class="language-javascript">const originalList = [1, 2]
 
-// [originalList, 3] => [[1, 2], 3]
-// [...originalList, 3] => [1, 2, 3]
+// [originalList, 3] -> [[1, 2], 3]
+// [...originalList, 3] -> [1, 2, 3]
 const newList = [...originalList, 3]
 originalList[0] = 5
 
@@ -1310,8 +1262,10 @@ for x in new_list:
         <h4 class="f5 mt0 mb2 normal"><strong>JavaScript (ES2015)</strong> / <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/map"><code>map</code></a></h4>
         <div class="overflow-auto ba bw2 b--white br4">
           <pre><code class="language-javascript">const originalList = [1, 2, 3]
-const newList = originalList.map(x => x * 2)
+
+// You can also do this:
 // const newList = originalList.map(x => { return x * 2 })
+const newList = originalList.map(x => x * 2)
 
 // 2
 // 4
@@ -1331,9 +1285,6 @@ newList.forEach(element => {
           <pre><code class="language-python">first_list = [1, 3]
 second_list = [3, 4]
 combined_list = [[x + y for y in second_list] for x in first_list]
-
-# [[4, 5], [6, 7]]
-# print(combined_list)
 
 # 4
 print(combined_list[0][0])
@@ -1453,13 +1404,6 @@ const zippedList = list1.map((x, y) => {
   return [x, list2[y]]
 })
 
-// 1 2
-// 3 4
-// 5 6
-// list1.map((x, y) => {
-//   console.log(`${x} ${list2[y]}`)
-// })
-
 zippedList.forEach(element => {
   console.log(`${element[0]} ${element[1]}`)
 })
@@ -1472,8 +1416,7 @@ zippedList.forEach(element => {
       <div class="fl w-100 w-50-l pa2 mb3">
         <h4 class="f5 mt0 mb2 normal"><strong>Python 3</strong> / <a href="https://docs.python.org/3/library/stdtypes.html#common-sequence-operations"><code>[i:j]</code></a></h4>
         <div class="overflow-auto ba bw2 b--white br4">
-          <pre><code class="language-python">#
-original_list = ["a", "b", "c", "d", "e"]
+          <pre><code class="language-python">original_list = ["a", "b", "c", "d", "e"]
 new_list = original_list[1:3]
 original_list[1] = "x"
 
@@ -1924,7 +1867,6 @@ print(json.dumps(some_dict, indent=2))
 //   "two": 2,
 //   "three": 3
 // }
-
 console.log(JSON.stringify(someDict, null, 2))
 </code></pre>
         </div>
@@ -2039,10 +1981,7 @@ print(add(b=1, a=2, c=3))
       <div class="fl w-100 w-50-l pa2 mb3">
         <h4 class="f5 mt0 mb2 normal"><strong>JavaScript (ES2015)</strong></h4>
         <div class="overflow-auto ba bw2 b--white br4">
-          <pre><code class="language-javascript">// TODO: Fill in ?
-// const add = ({ ? }) => ?
-
-const add = ({ a, b, c }) => {
+          <pre><code class="language-javascript">const add = ({ a, b, c }) => {
   return a + b + c
 }
 
@@ -2198,10 +2137,7 @@ func_2(1, 2, 3, a=4, b=5)
       <div class="fl w-100 w-50-l pa2 mb3">
         <h4 class="f5 mt0 mb2 normal"><strong>JavaScript (ES2015)</strong> / <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Functions/rest_parameters"><code>Rest Parameters</code></a></h4>
         <div class="overflow-auto ba bw2 b--white br4">
-          <pre><code class="language-javascript">// TODO: fill ?
-// const func1 = (?) => ?
-// const func2 = (x, ?, ...args) => ?
-const func1 = kwargs => {
+          <pre><code class="language-javascript">const func1 = kwargs => {
   Object.entries(kwargs).forEach(element => {
     console.log(`${element[0]} ${element[1]}`)
   })
