--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
   <link rel="stylesheet" href="static/prism-base16-atelierplateau.light.css"/>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <meta property="og:title" content="How to write X in both Python 3 and JavaScript (ES2015)">
+  <meta property="og:locale" content="en">
+  <meta property="og:url" content="https://sayazamurai.github.io/python-vs-javascript/">
+  <meta property="og:site_name" content="Saya">
+  <meta property="og:image" content="https://sayazamurai.github.io/python-vs-javascript/static/images/og.jpg">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@sayajewels">
+  <meta name="twitter:creator" content="@sayajewels">
   <style>
     a {
       color: inherit;
