--- a/index.html
+++ b/index.html
@@ -58,8 +58,12 @@
     <div class="center tc mb3">
       <img class="ba b--white bw2 dib br4" src="static/images/saya-profile.jpg" width="130" height="130" />
     </div>
-    <p class="profile-text mw6 center" style="margin-top:0;">
+    <p class="profile-text mw6 center mt0">
       I'm Saya, a jewelry designer and a junior JavaScript/Python developer living in Tokyo. Find me on Twitter: <a href="https://twitter.com/sayajewels">@sayajewels</a>
+    </p>
+    <p class="profile-text mw6 center mt0">
+       <blockquote class="twitter-tweet tw-align-center" data-lang="en"><p lang="en" dir="ltr">If you&#39;re are Python programmer learning JavaScript, or a JavaScript programmer learning Python, this handy cheat sheet might help you. Pull requests are welcome! 🐥 ✨<br><br>How to write X in both Python 3 and JavaScript (ES2015)<a href="https://t.co/F3MScUMheC">https://t.co/F3MScUMheC</a></p>&mdash; Saya (@sayajewels) <a href="https://twitter.com/sayajewels/status/1040602212718632960?ref_src=twsrc%5Etfw">September 14, 2018</a></blockquote>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </p>
   </div>
   <div class="tabele-of-contents center mw7 pb3 ph3 mb4">
