fix little bugs

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@ try {
 # Fizz
 # 4
 # Buzz
-for number in range(1, 100):
+for number in range(1, 101):
     if number == 3:
         print("Fizz")
         continue
@@ -645,7 +645,7 @@ console.log(someString.trim())
       </div>
     </div>
     <div class="Q17 cf ph2-ns mb4-ns mb3">
-      <h3 class="tc normal f3-ns f4 mb2">String: <strong>Sprit</strong></h3>
+      <h3 class="tc normal f3-ns f4 mb2">String: <strong>Split</strong></h3>
       <div class="fl w-100 w-50-l pa2 mb3">
         <h4 class="f5 mt0 mb2 normal"><strong>Python 3</strong> / <a href="https://docs.python.org/3/library/stdtypes.html#str.split"><code>split</code></a></h4>
         <div class="overflow-auto ba bw2 b--white br4">
