--- a/index.html
+++ b/index.html
@@ -1850,7 +1850,7 @@ Object.entries(newDict).forEach(element => {
       </div>
     </div>
     <div class="Q53 cf ph2-ns mb4-ns mb3">
-      <h3 class="tc normal f3-ns f4 mb2">Dictionary/Object: <strong>to JSON</strong></h3>
+      <h3 class="tc normal f3-ns f4 mb2">Dictionary/Object: <strong>Dictionary/Object to JSON string</strong></h3>
       <div class="fl w-100 w-50-l pa2 mb3">
         <h4 class="f5 mt0 mb2 normal"><strong>Python 3</strong> / <a href="https://docs.python.org/3/library/json.html#json.dumps"><code>json.dumps</code></a></h4>
         <div class="overflow-auto ba bw2 b--white br4">
@@ -1883,7 +1883,7 @@ console.log(JSON.stringify(someDict, null, 2))
       </div>
     </div>
     <div class="Q54 cf ph2-ns mb4-ns mb3">
-      <h3 class="tc normal f3-ns f4 mb2">Dictionary/Object: <strong>from JSON</strong></h3>
+      <h3 class="tc normal f3-ns f4 mb2">Dictionary/Object: <strong>JSON string to Dictionary/Object</strong></h3>
       <div class="fl w-100 w-50-l pa2 mb3">
         <h4 class="f5 mt0 mb2 normal"><strong>Python 3</strong> / <a href="https://docs.python.org/3/library/json.html#json.loads"><code>json.loads</code></a></h4>
         <div class="overflow-auto ba bw2 b--white br4">
