--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ console.log(Math.abs(50))</code></pre>
       </div>
     </div>
     <div class="Q02 cf ph2-ns mb4-ns mb3">
-      <h3 class="tc normal f3-ns f4 mb2">Math: <strong>Round numbers</strong></h3>
+      <h3 class="tc normal f3-ns f4 mb2">Math: <strong>Round Numbers</strong></h3>
       <div class="fl w-100 w-50-l pa2 mb3">
         <h4 class="f5 mt0 mb2 normal"><strong>Python 3</strong> / <a href="https://docs.python.org/3/library/math.html#math.ceil"><code>ceil</code></a>, <a href="https://docs.python.org/3/library/math.html#math.floor"><code>floor</code></a>, <a href="https://docs.python.org/3/library/functions.html#round"><code>round</code></a></h4>
         <div class="overflow-auto ba bw2 b--white br4">
