--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
        <blockquote class="twitter-tweet tw-align-center" data-cards="hidden"  data-lang="en"><p lang="en" dir="ltr">If you&#39;re are Python programmer learning JavaScript, or a JavaScript programmer learning Python, this handy cheat sheet might help you. Pull requests are welcome! 🐥 ✨<br><br>How to write X in both Python 3 and JavaScript (ES2015)<a href="https://t.co/F3MScUMheC">https://t.co/F3MScUMheC</a></p>&mdash; Saya (@sayajewels) <a href="https://twitter.com/sayajewels/status/1040602212718632960?ref_src=twsrc%5Etfw">September 14, 2018</a></blockquote>
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </p>
+    <p class="profile-text mw6 center mt0">
+      <strong>See also:</strong> Ilya Schurov has made a <a href="https://ischurov.github.io/pythonvjs/">similar page</a> - check it out!
+    </p>
   </div>
   <div class="tabele-of-contents center mw7 pb3 ph3 mb4">
     <h2 class="tc f3-ns f4 mb2">Table of Contents</h2>
